# osmium-geos-factory

./: CMakeLists.txt  README.md
cmake/: FindOsmiumGeosFactory.cmake
include/osmium_geos_factory/: geos_factory.hpp
test/: CMakeLists.txt  README
test/t/: test_geos_factory.cpp  test_geos_factory_mercator.cpp  test_geos_factory_projection.cpp
